Test af fejlmeddelelse ved wsdl-valideringsfejl - midlertidigt commit, der revert'es liiiige om lidt

--- a/build.xml
+++ b/build.xml
@@ -428,8 +428,8 @@
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2013_pem"/>
-		<!-- Omitted, due to (irrelevant) error 
-		<validatewsdl-macro wsdlfilename="PEMAuditLog_2009_01_01"/> -->
+		<!-- Omitted, due to (irrelevant) error -->
+		<validatewsdl-macro wsdlfilename="PEMAuditLog_2009_01_01"/> 
 		<validatewsdl-macro wsdlfilename="DumpRestore-inline_2013_01_01"/>
 		<validatewsdl-macro wsdlfilename="VersionService-inline_2014_08_01"/>
 	</target>
