Revert "Test af wsdl-validering - brug ikke dette commit (!), reverse-commit'es om et øjeblik"
This reverts commit 8681f9ade627d26e3e7079d3f0e264af97ea9c3c.

--- a/build.xml
+++ b/build.xml
@@ -402,7 +402,7 @@
     <macrodef name="validatewsdl-macro">
         <attribute name="wsdlfilename"/>
 		<sequential>
-			<exec executable="wsdl" errorproperty="error_@{wsdlfilename}" resultproperty="result_@{wsdlfilename}">
+			<exec executable="wsdl.bat" errorproperty="error_@{wsdlfilename}" resultproperty="result_@{wsdlfilename}">
 				<arg line="${paramprefix}nologo"/>
 				<arg line="${standard.target.dir}/wsdl/@{wsdlfilename}.wsdl"/>
 				<arg line="${paramprefix}out:@{wsdlfilename}.cs"/>
