FMK-2792: Rettet fejl i wsdl, samt indført generering af PatientRegistration 1.4.4.E1 zip-filer

--- a/build.xml
+++ b/build.xml
@@ -193,6 +193,7 @@
         <organize-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2012_06_01"/>
         <organize-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
+        <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
 
         <organize-schemas-macro wsdlname="DumpRestore" versiondate="2013_01_01"/>
 
@@ -318,6 +319,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -421,6 +423,7 @@
 		<validatewsdl-macro wsdlfilename="PatientOrganisationRelation-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientOrganisationRelation-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01"/>
+        <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E1"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2013_06_01"/>
