Fix FMK-2834 FMK får schemavalideringsfejl ved idws-kald på saml assertion lave via cxf

--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="lib/build/dk.sosi.seal-seal.jar"/>
 	<classpathentry kind="lib" path="lib/build/com.trifork-xmlobject.jar"/>
 	<classpathentry kind="lib" path="lib/build/xerces-xercesImpl.jar"/>
+	<classpathentry kind="lib" path="lib/build/xml-apis-xml-apis.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-codec-commons-codec.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
