Fjernet idws-filer fra validering. Prøver igen senere

--- a/build.xml
+++ b/build.xml
@@ -429,11 +429,11 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E1"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01"/>
 
-                <validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2012_06_01"/>
+                <!--validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01_E1"/>
-		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_06_01"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_06_01"/-->
                 
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2013_06_01"/>
