Ny tool klasse der kan fjerne ubenyttede skemafiler fra services i en given wsdl fil

--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,89 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/build/log4j-log4j.jar"/>
-	<classpathentry kind="lib" path="lib/build/commons-io-commons-io.jar"/>
-	<classpathentry kind="lib" path="lib/build/dk.sosi.seal-seal.jar"/>
+	<classpathentry kind="lib" path="lib/build/bouncycastle-bcprov-jdk14.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.sun.xml.bind-jaxb-impl.jar"/>
 	<classpathentry kind="lib" path="lib/build/com.trifork-xmlobject.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.unboundid-unboundid-ldapsdk.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.unboundid.components-json.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.unboundid.product.scim-scim-ldap-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.unboundid.product.scim-scim-ldap-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.unboundid.product.scim-scim-ldap.jar"/>
+	<classpathentry kind="lib" path="lib/build/com.unboundid.product.scim-scim-sdk.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-cli-commons-cli.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-codec-commons-codec-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-codec-commons-codec-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-codec-commons-codec.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-fileupload-commons-fileupload.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-httpclient-commons-httpclient.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-io-commons-io-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-io-commons-io-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-io-commons-io.jar"/>
+	<classpathentry kind="lib" path="lib/build/commons-logging-commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/build/dk.sosi.seal-luna-dummy.jar"/>
+	<classpathentry kind="lib" path="lib/build/dk.sosi.seal-seal-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/dk.sosi.seal-seal.jar"/>
+	<classpathentry kind="lib" path="lib/build/javax.activation-activation.jar"/>
+	<classpathentry kind="lib" path="lib/build/javax.servlet-servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/javax.ws.rs-jsr311-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/javax.xml.bind-jaxb-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/javax.xml.stream-stax-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/jaxen-jaxen.jar"/>
+	<classpathentry kind="lib" path="lib/build/log4j-log4j.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ant-ant-launcher.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ant-ant.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis-axis-ant.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis-axis-jaxrpc.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis-axis-saaj.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis-axis.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-adb-codegen.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-adb.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-ant-plugin-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-ant-plugin-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-ant-plugin.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-codegen.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-java2wsdl.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-kernel.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-transport-http.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-transport-local.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-xmlbeans-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-xmlbeans-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.axis2-axis2-xmlbeans.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.geronimo.specs-geronimo-activation_1.1_spec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.geronimo.specs-geronimo-annotation_1.1_spec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.geronimo.specs-geronimo-javamail_1.4_spec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.geronimo.specs-geronimo-jta_1.1_spec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.geronimo.specs-geronimo-stax-api_1.0_spec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.geronimo.specs-geronimo-ws-metadata_2.0_spec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.httpcomponents-httpclient.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.httpcomponents-httpcore.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.james-apache-mime4j-core.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.neethi-neethi.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.santuario-xmlsec.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.wink-wink-client-apache-httpclient.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.wink-wink-client.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.wink-wink-common.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.woden-woden-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.woden-woden-impl-commons.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.woden-woden-impl-dom.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.commons.axiom-axiom-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.commons.axiom-axiom-compat.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.commons.axiom-axiom-impl.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.commons.schema-XmlSchema.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.security-wss4j-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.security-wss4j-sources.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.ws.security-wss4j.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.apache.xmlbeans-xmlbeans.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.bouncycastle-bcprov-jdk15on.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.codehaus.woodstox-stax2-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.codehaus.woodstox-woodstox-core-asl.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.mortbay.jetty-servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.opensaml-opensaml.jar"/>
+	<classpathentry kind="lib" path="lib/build/org.slf4j-slf4j-api.jar"/>
+	<classpathentry kind="lib" path="lib/build/wsdl4j-wsdl4j.jar"/>
+	<classpathentry kind="lib" path="lib/build/xalan-serializer.jar"/>
+	<classpathentry kind="lib" path="lib/build/xalan-xalan.jar"/>
 	<classpathentry kind="lib" path="lib/build/xerces-xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/build/xml-apis-xml-apis.jar"/>
-	<classpathentry kind="lib" path="lib/build/commons-codec-commons-codec.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
