FMK-3317 POR funktionalitet kopieret fra 1.4.4[.E1] til 1.4.6

--- a/build.xml
+++ b/build.xml
@@ -122,6 +122,7 @@
         <organize-idws-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
+        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
 
         <copy todir="${idws.target.dir}">
             <fileset dir="${idws.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -199,6 +200,7 @@
         <organize-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
+        <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
 
         <organize-schemas-macro wsdlname="DumpRestore" versiondate="2013_01_01"/>
 
@@ -267,7 +269,6 @@
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E1" version="1.4.4.E1"/>
         <dist_zips-macro version-yymmdd="2015_06_01" version="1.4.6"/>
-        <dist_zips-macro version-yymmdd="2012_06_01" version="1.4.0"/>
 
         <!-- Collection of all collections -->
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
@@ -322,6 +323,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -423,7 +425,8 @@
 		<validatewsdl-macro wsdlfilename="PatientOrganisationRelation-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientOrganisationRelation-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01"/>
-                <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E1"/>
+        <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E1"/>
+		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01"/>
 
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_06_01"/>
