--- a/ivy.xml
+++ b/ivy.xml
@@ -5,6 +5,7 @@
 		<conf name="build" />
 		<conf name="deploy" />
 		<conf name="jar" />
+		<conf name="adminjar" />
 		<conf name="src" />
 		<conf name="test" />
 	</configurations>
@@ -16,6 +17,7 @@
         <artifact name="NamespaceOracle-generated" ext="properties" />
         <artifact name="fmk-schema-classes" ext="jar" conf="jar" />
         <artifact name="fmk-schema-source" ext="zip" conf="src" />
+		<artifact name="fmk-schema-admin-classes" ext="jar" conf="adminjar" />
 	</publications>
 
 	<dependencies>
