--- a/ivy.xml
+++ b/ivy.xml
@@ -17,6 +17,7 @@
         <artifact name="NamespaceOracle-generated" ext="properties" />
         <artifact name="fmk-schema-classes" ext="jar" conf="jar" />
         <artifact name="fmk-schema-source" ext="zip" conf="src" />
+		<artifact name="fmk-schema-admin" ext="zip" />
 		<artifact name="fmk-schema-admin-classes" ext="jar" conf="adminjar" />
 	</publications>
 
