FMK-3369: Ændret nogle element typer fra strenge til lister af strenge.

--- a/build.xml
+++ b/build.xml
@@ -318,8 +318,10 @@
             <fileset dir="./etc/admin-schemas"/>
         </copy>
 
-        <zip destfile="${target.dir}/fmk-schema-admin.zip">
-            <fileset dir="${target.admin.dir}/schemas"/>
+        <zip destfile="${target.dir}/fmk-schema-admin.zip" >
+            <fileset dir="${target.admin.dir}">
+                <include name="schemas/**/*.xsd"/>
+            </fileset>
         </zip>
 
         <mkdir dir="${target.admin.dir}/src"/>
