--- a/build.xml
+++ b/build.xml
@@ -478,6 +478,8 @@
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01"/>
+		
+		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_Idws_2015_01_01"/>
 
 		<validatewsdl-macro wsdlfilename="DumpRestore-inline_2013_01_01"/>
 		<validatewsdl-macro wsdlfilename="VersionService-inline_2014_08_01"/>
